--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -111,7 +111,7 @@
 
   /* Use for all checkbox controls. */
   .form-input-checkbox {
-    @apply rounded-sm border border-slate-400   checked:border-indigo-500 checked:accent-indigo-500 text-indigo-600 dark:bg-slate-700 dark:border-slate-600 focus:ring-indigo-500/30 dark:checked:border-indigo-400 dark:checked:accent-indigo-400;
+    @apply rounded border border-slate-400 checked:border-indigo-600 checked:accent-indigo-600 text-indigo-600 dark:bg-slate-700 dark:border-slate-600 focus:ring-indigo-500/30 dark:checked:border-indigo-500 dark:checked:accent-indigo-500 dark:checked:bg-indigo-500;
 
     &[disabled] {
       @apply opacity-60;
@@ -124,7 +124,7 @@
 
   /* Use for all radio inputs. */
   .form-input-radio {
-    @apply rounded-full border border-slate-400 focus:ring-2 checked:ring-indigo-200 checked:border-indigo-600 checked:accent-indigo-600 checked:shadow-indigo-600 text-indigo-600 focus-visible:text-indigo-600 focus-visible:ring-indigo-200 focus-visible:outline-none dark:bg-slate-700 dark:border-slate-600 dark:checked:border-indigo-400 dark:checked:accent-indigo-400;
+    @apply rounded-full border border-slate-400 checked:border-indigo-600 checked:accent-indigo-600 text-indigo-600 dark:bg-slate-700 dark:border-slate-600 focus-visible:ring-indigo-500/30 focus-visible:outline-none dark:checked:border-indigo-500 dark:checked:accent-indigo-500 dark:checked:bg-indigo-500;
   }
 
   .form-check-label,
