--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -49,7 +49,7 @@
               <%= inline_svg_tag 'icons/computer.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent">
+            <div class="block !bg-transparent select-none">
               <p class="w-full font-semibold">System default</p>
               <p class="w-full text-xs">Automatically adjusts based on device settings</p>
             </div>
@@ -63,7 +63,7 @@
               <%= inline_svg_tag 'icons/sun.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent">
+            <div class="block !bg-transparent select-none">
               <p class="w-full font-semibold">Light mode</p>
               <p class="w-full text-xs">Clean, bright interface for well-lit environments</p>
             </div>
@@ -77,7 +77,7 @@
               <%= inline_svg_tag 'icons/moon.svg', class: 'size-5 peer-checked:text-indigo-500' %>
             </div>
 
-            <div class="block !bg-transparent">
+            <div class="block !bg-transparent select-none">
               <p class="w-full font-semibold">Dark mode</p>
               <p class="w-full text-xs">Easy on the eyes in low-light environments</p>
             </div>
