--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -106,7 +106,7 @@
     font-style: normal;
     font-weight: 100 900;
     font-display: swap;
-    src: url('InterVariable.woff2') format('woff2');
+    src: url('/public/fonts/InterVariable.woff2') format('woff2');
   }
 
   @font-face {
@@ -114,7 +114,7 @@
     font-style: italic;
     font-weight: 100 900;
     font-display: swap;
-    src: url('InterVariable-Italic.woff2') format('woff2');
+    src: url('/public/fonts/InterVariable-Italic.woff2') format('woff2');
   }
 
   input[type='number']::-webkit-inner-spin-button,
