--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -103,7 +103,9 @@
   </div>
 </div>
 
-<% if user.show_email? || (user.phone_number? && user.show_phone?) %>
+<% user_phone = user.phone_number? && user.show_phone? %>
+
+<% if user.show_email? || user_phone %>
   <div class="mb-24">
     <div class="pb-6 my-6 border-b border-slate-200 dark:border-slate-700">
       <h2 class="subheading">Contact</h2>
@@ -130,7 +132,7 @@
         </div>
       <% end %>
 
-      <% if user.show_phone? && user.phone_number? %>
+      <% if user_phone %>
         <div class="card">
           <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
           <p class="text-lg font-bold mb-4">
