--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -3,7 +3,7 @@
 <% if @breadcrumbs.any? %>
   <nav class="p-6 inline-flex flex-wrap items-center gap-2 text-soft" aria-label="breadcrumb">
     <%= link_to home_breadcrumb[:url], class: "inline-flex items-center gap-2 text-sm whitespace-nowrap btn-link-soft font-normal" do %>
-      <%= inline_svg_tag 'icons/home.svg', class: 'size-3.5 shrink-0' %>
+      <%= inline_svg_tag 'icons/home-filled.svg', class: 'size-3.5 shrink-0' %>
       <%= home_breadcrumb[:name] %>
     <% end %>
     <% @breadcrumbs.each_with_index do |breadcrumb, index| %>
