--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -3,6 +3,7 @@
 <% current_is_new_run = current_page?(new_run_path) %>
 <% current_is_teams = current_page?(teams_path) %>
 <% current_is_profile = current_page?(profile_path) %>
+<% current_is_root = current_page?(root_path) %>
 
 <div
   data-controller="modal"
@@ -10,7 +11,7 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="fixed bottom-24 right-4 md:hidden"
+  class="fixed bottom-24 right-4 md:hidden bg-transparent z-50"
 >
   <!-- Open New Run Modal Button -->
   <button data-action="mousedown->modal#open" data-modal-id="newRunModal" class="btn btn-primary p-3 rounded-full shadow-[0_5px_20px_-5px] shadow-indigo-600 hover:shadow-[0_5px_15px_-5px] hover:shadow-indigo-700 hover:scale-110 transition duration-200 ease-in-out grid place-items-center">
@@ -21,14 +22,23 @@
   <%= render 'runs/new_run_modal' %>
 </div>
 
-<nav class="fixed bottom-0 inset-x-0 md:hidden grid grid-cols-4 w-full p-2 bg-white/85 dark:bg-slate-800/85 backdrop-blur border-t border-slate-200 dark:border-slate-700">
-  <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_edit_user}" do %>
-    <% if current_is_edit_user %>
-      <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-6 shrink-0' %>
+<nav class="fixed bottom-0 inset-x-0 md:hidden grid grid-cols-5 w-full px-1 py-2 bg-white/85 dark:bg-slate-800/85 backdrop-blur border-t border-slate-200 dark:border-slate-700">
+  <%= link_to root_path, aria: { current: current_is_root ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_root}" do %>
+    <% if current_is_root %>
+      <%= inline_svg_tag 'icons/home-filled.svg', class: 'size-6 shrink-0' %>
     <% else %>
-      <%= inline_svg_tag 'icons/settings.svg', class: 'size-6 shrink-0' %>
+      <%= inline_svg_tag 'icons/home.svg', class: 'size-6 shrink-0' %>
     <% end %>
-    <span>Settings</span>
+    <span>Home</span>
+  <% end %>
+
+  <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_teams}" do %>
+    <% if current_is_teams %>
+      <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-6 shrink-0' %>
+    <% else %>
+      <%= inline_svg_tag 'icons/team.svg', class: 'size-6 shrink-0' %>
+    <% end %>
+    <span>Teams</span>
   <% end %>
 
   <%= link_to search_path, aria: { current: current_is_search ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_search}" do %>
@@ -40,13 +50,13 @@
     <span>Search</span>
   <% end %>
 
-  <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_teams}" do %>
-    <% if current_is_teams %>
-      <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-6 shrink-0' %>
+  <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_edit_user}" do %>
+    <% if current_is_edit_user %>
+      <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-6 shrink-0' %>
     <% else %>
-      <%= inline_svg_tag 'icons/team.svg', class: 'size-6 shrink-0' %>
+      <%= inline_svg_tag 'icons/settings.svg', class: 'size-6 shrink-0' %>
     <% end %>
-    <span>Teams</span>
+    <span>Settings</span>
   <% end %>
 
   <%= link_to profile_path, aria: { current: current_is_profile ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_profile}" do %>
