--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -10,6 +10,10 @@
   .tab-link {
     @apply flex flex-col items-center gap-1 p-1 font-bold text-xs text-soft hover:text-light transition duration-200 ease-in-out dark:focus:text-white;
 
+    span {
+      @apply sr-only;
+    }
+
     &.tab-link-active {
       @apply text-indigo-600 dark:text-indigo-500 hover:text-indigo-500 dark:hover:text-indigo-600;
 
@@ -32,7 +36,7 @@
   }
 
   .tab-container {
-    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
+    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm snap-x hide-scrollbar;
   }
 
   .tab-container-scroll-left {
