--- a/app/views/teams/show/_join_request.html.erb
+++ b/app/views/teams/show/_join_request.html.erb
@@ -7,14 +7,14 @@
     <%= link_to request.user, class: 'group flex items-center gap-3 flex-1' do %>
       <%= render 'shared/user_photo', user: request.user, size: :xs, icon_background: :darker %>
 
-      <div class="flex-1">
+      <div class="flex-1 leading-tight">
         <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= request.user.default_name %></p>
-        <%= content_tag(:p, request.user.username, class: 'text-soft text-sm') if request.user.display_name.present? %>
+        <%= content_tag(:p, request.user.username, class: 'text-soft text-xs') if request.user.display_name.present? %>
       </div>
     <% end %>
 
     <div class="flex shrink-0 items-center gap-3">
-      <%= button_to 'Approve', approve_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-primary', data: { turbo: false } %>
+      <%= button_to 'Approve', approve_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-primary btn-muted', data: { turbo: false } %>
       <%= button_to 'Reject', reject_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-destructive btn-muted', data: { turbo: false } %>
     </div>
   </div>
