--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -22,7 +22,7 @@
   <%= render 'runs/new_run_modal' %>
 </div>
 
-<nav class="fixed bottom-0 inset-x-0 md:hidden grid grid-cols-5 w-full px-1 py-2 bg-white/85 dark:bg-slate-800/85 backdrop-blur border-t border-slate-200 dark:border-slate-700">
+<nav class="fixed z-50 bottom-0 inset-x-0 md:hidden grid grid-cols-5 w-full px-1 py-2 bg-white/85 dark:bg-slate-800/85 backdrop-blur border-t border-slate-200 dark:border-slate-700">
   <%= link_to root_path, aria: { current: current_is_root ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_root}" do %>
     <% if current_is_root %>
       <%= inline_svg_tag 'icons/home-filled.svg', class: 'size-6 shrink-0' %>
