--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -18,7 +18,7 @@
       @apply text-indigo-600 dark:text-indigo-500 hover:text-indigo-500 dark:hover:text-indigo-600;
 
       &::after {
-        @apply content-[''] block w-10 h-[2.5px] bg-current rounded-full mt-0.5;
+        @apply content-[''] block w-10 h-[2.5px] bg-current rounded-full mt-0.5 -mb-1;
       }
     }
   }
