fix(team): check if team is persisted before calling `edit_team_path`

--- a/app/views/shared/_team_photo.html.erb
+++ b/app/views/shared/_team_photo.html.erb
@@ -57,7 +57,7 @@
 <% if team.photo.attached? %>
   <%= image_tag team.photo.variant(resize_to_limit: [px_size, px_size]).processed, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
 <% elsif image_only %>
-  <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if current_page?(edit_team_path(team)) %>
+  <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if team.persisted? && current_page?(edit_team_path(team)) %>
 <% else %>
   <div class="grid place-items-center <%= size_classes %> <%= icon_background_class %> <%= image_classes %>">
     <%= inline_svg_tag "icons/team#{icon_filled ? '-filled' : ''}.svg", class: "#{fallback_size_class} #{icon_color_class}" %>
