--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,7 +1,9 @@
+<% user_is_current = user == current_user %>
+
 <div class="mb-24">
   <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
     <h1 class="heading">User Info</h1>
-    <p class="text-soft">Information and statistics about <%= user == current_user ? 'you' : "#{user.first_name}" %>.</p>
+    <p class="text-soft">Information and statistics about <%= user_is_current ? 'you' : "#{user.first_name}" %>.</p>
   </div>
 
   <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
@@ -44,14 +46,20 @@
 </div>
 
 <% user_phone = user.phone_number? && user.show_phone? %>
+<% user_email = user.show_email? %>
 
-<% if user.show_email? || user_phone %>
+<% if user_email || user_phone || user_is_current %>
   <div class="mb-24">
     <div class="pb-6 my-6 border-b border-slate-200 dark:border-slate-700">
       <h2 class="subheading">Contact</h2>
       <p class="text-sm text-soft">
-        <% if user == current_user %>
-          Your contact information. You can hide this in your <%= link_to 'settings', edit_user_registration_path(tab: 'settingsTab'), class: 'btn-link transition duration-200 ease-in-out' %>.
+        <% if user_is_current %>
+          Your contact information.
+          <% if user_email || user_phone %>
+            You can hide this in your <%= link_to 'settings', edit_user_registration_path(tab: 'settingsTab'), class: 'btn-link transition duration-200 ease-in-out' %>.
+          <% else %>
+            No one can see this except you. You can show this in your <%= link_to 'settings', edit_user_registration_path(tab: 'settingsTab'), class: 'btn-link transition duration-200 ease-in-out' %>.
+          <% end %>
         <% else %>
           Contact information for <%= user.first_name %>.
         <% end %>
@@ -59,10 +67,18 @@
     </div>
 
     <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-      <% if user.show_email? %>
-        <div class="card">
-          <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Email Address</h2>
-          <p class="text-lg font-bold mb-4">
+      <% if user_email || user_is_current %>
+        <div class="card flex flex-col">
+          <div class="mb-6">
+            <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Email Address</h2>
+            <% unless user_email %>
+              <div class="flex items-center gap-1">
+                <%= inline_svg_tag 'icons/eye-slash.svg', class: 'size-3.5 text-muted' %>
+                <p class="text-xs text-soft">Hidden from other users</p>
+              </div>
+            <% end %>
+          </div>
+          <p class="text-lg font-bold mb-4 mt-auto">
             <%= user.email %>
           </p>
           <%= mail_to user.email, class: 'btn btn-white w-full gap-2' do %>
@@ -72,10 +88,18 @@
         </div>
       <% end %>
 
-      <% if user_phone %>
-        <div class="card">
-          <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
-          <p class="text-lg font-bold mb-4">
+      <% if user_phone || user_is_current %>
+        <div class="card flex flex-col">
+          <div class="mb-6">
+            <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
+            <% unless user_phone %>
+              <div class="flex items-center gap-1">
+                <%= inline_svg_tag 'icons/eye-slash.svg', class: 'size-3.5 text-muted' %>
+                <p class="text-xs text-soft">Hidden from other users</p>
+              </div>
+            <% end %>
+          </div>
+          <p class="text-lg font-bold mb-4 mt-auto">
             <%= user.formatted_phone_number(:national_with_country_code) %>
           </p>
           <div class="flex items-center gap-2">
