--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -69,7 +69,7 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :season_end_date, class: 'form-label transition duration-300 ease-in-out', data: { form_validation_target: 'seasonEndDateLabel' } do %>
+    <%= form.label :season_end_date, class: 'form-label transition duration-200 ease-in-out', data: { form_validation_target: 'seasonEndDateLabel' } do %>
       <p> Season end date
         <span class="help-text">(optional)</span>
       </p>
@@ -77,7 +77,7 @@
 
     <div class="relative">
       <%= inline_svg_tag 'icons/calendar.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-      <%= form.date_field :season_end_date, value: form.object.new_record? ? nil : team.season_end_date, class: 'form-input pl-10', data: { form_validation_target: "seasonEndDate", action: "input->form-validation#validateSeasonEndDate" } %>
+      <%= form.date_field :season_end_date, value: form.object.new_record? ? nil : team.season_end_date, class: 'form-input pl-10 transition duration-200 ease-in-out', data: { form_validation_target: 'seasonEndDate', action: 'input->form-validation#validateSeasonEndDate' } %>
     </div>
 
     <p class="hidden my-1 error-message" data-form-validation-target="seasonEndDateError">Season end date must be after season start date</p>
