refactor(a11y): add accessible aria labels to modals

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -35,6 +35,7 @@
       <div
         id="unlinkGoogleAccountModal"
         role="dialog"
+        aria-label="Unlink Google Account Confirmation"
         tabindex="-1"
         data-modal-target="modal"
         class="modal opacity-0 scale-75 pointer-events-none"
@@ -390,6 +391,7 @@
   <div
     id="signOutModal"
     role="dialog"
+    aria-label="Sign Out Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
@@ -421,6 +423,7 @@
   <div
     id="signOutAllModal"
     role="dialog"
+    aria-label="Sign Out All Devices Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
@@ -452,6 +455,7 @@
   <div
     id="deleteAccountModal"
     role="dialog"
+    aria-label="Delete Account Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
