--- a/app/views/pinned_pages/_delete_page_modal.html.erb
+++ b/app/views/pinned_pages/_delete_page_modal.html.erb
@@ -9,6 +9,7 @@
 <div
   id="deletePage_<%= page.id %>"
   role="dialog"
+  aria-label="Unpin Shortcut Confirmation"
   tabindex="-1"
   data-modal-target="modal"
   class="modal opacity-0 scale-75 pointer-events-none"
