--- a/app/views/runs/_actions_dropdown.html.erb
+++ b/app/views/runs/_actions_dropdown.html.erb
@@ -55,6 +55,7 @@
   <div
     id="deleteRunModal"
     role="dialog"
+    aria-label="Delete Run Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
