--- a/app/views/runs/_new_run_modal.html.erb
+++ b/app/views/runs/_new_run_modal.html.erb
@@ -9,6 +9,7 @@
 <div
   id="newRunModal"
   role="dialog"
+  aria-label="New Run Form"
   tabindex="-1"
   data-modal-target="modal"
   class="modal opacity-0 scale-75 pointer-events-none origin-bottom-right md:origin-bottom-left"
