--- a/app/views/teams/shared/_delete_team_modal.html.erb
+++ b/app/views/teams/shared/_delete_team_modal.html.erb
@@ -9,6 +9,7 @@
 <div
   id="deleteTeam"
   role="dialog"
+  aria-label="Delete Team Confirmation"
   tabindex="-1"
   data-modal-target="modal"
   class="modal opacity-0 scale-75 pointer-events-none"
