--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -37,6 +37,7 @@
         <div
           id="removeMember"
           role="dialog"
+          aria-label="Remove Team Member Confirmation"
           tabindex="-1"
           data-modal-target="modal"
           class="modal opacity-0 scale-75 pointer-events-none"
