--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -144,12 +144,13 @@
   <div
     id="resetUserSettings"
     role="dialog"
+    aria-label="Reset Settings Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-      <h2 class="text-lg font-semibold leading-none tracking-tight">Reset User Settings?</h2>
+      <h2 class="text-lg font-semibold leading-none tracking-tight">Reset Settings?</h2>
       <p class="text-soft text-sm">Are you sure you want to reset your settings? <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
     </div>
 
