--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -197,6 +197,7 @@
   <div
     id="resetTeamSettings"
     role="dialog"
+    aria-label="Reset Team Settings Confirmation"
     tabindex="-1"
     data-modal-target="modal"
     class="modal opacity-0 scale-75 pointer-events-none"
