--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -3,7 +3,7 @@
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="teamMembershipsTab" class="max-w-3xl mx-auto my-16">
   <div class="relative flex items-center mb-6">
     <!-- Left Arrow -->
-    <button type="button" data-action="mousedown->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollLeft" data-tabs-target="leftArrow" aria-label="Scroll tabs left" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Right Arrow -->
-    <button type="button" data-action="mousedown->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollRight" data-tabs-target="rightArrow" aria-label="Scroll tabs right" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
       <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
