--- a/app/views/teams/shared/_team.html.erb
+++ b/app/views/teams/shared/_team.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="flex flex-wrap-reverse items-end gap-3">
     <div class="flex items-center gap-3 flex-1">
-      <%= link_to render('shared/team_photo', team: team, size: :xs, icon_background: :darker), team, data: { turbo: false }, class: 'peer' %>
+      <%= link_to render('shared/team_photo', team: team, size: :xs, icon_background: :darker), team, data: { turbo: false }, class: 'peer', aria: { label: "View #{team.name}" } %>
       <div class="flex-1 leading-tight peer-hover:text-indigo-600 dark:peer-hover:text-indigo-500">
         <%= link_to team.name, team, data: { turbo: false }, class: 'font-bold transition ease-in-out duration-200 hover:text-indigo-600 dark:hover:text-indigo-500' %>
         <p class="text-soft text-xs">
