refactor(team settings): rename title on team edit page

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, 'Team Settings' %>
+<% content_for :title, "Edit Team #{@team.name}" %>
 
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="editTab" class="max-w-3xl mx-auto my-16 mb-24">
   <div class="relative flex items-center mb-6">
