--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, 'Home' %>
 
 <div class="max-w-4xl mx-auto my-16">
-  <h1 class="heading mb-4">Welcome back, <%= current_user.default_name %>!</h1>
+  <h1 class="heading tracking-normal mb-4">Welcome back, <%= current_user.default_name %>!</h1>
 
   <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
     <%= render 'shared/user_current_streak_card', user: current_user %>
