style(run): transform new run modal from sidebar button

--- a/app/views/runs/_new_run_modal.html.erb
+++ b/app/views/runs/_new_run_modal.html.erb
@@ -12,7 +12,7 @@
   aria-label="New Run Form"
   tabindex="-1"
   data-modal-target="modal"
-  class="modal opacity-0 scale-75 pointer-events-none origin-bottom-right md:origin-bottom-left"
+  class="modal opacity-0 scale-75 pointer-events-none origin-bottom-right md:origin-[-100%_200%]"
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left mb-6">
     <h2 class="text-lg font-semibold leading-none tracking-tight">New Run</h2>
