style(tabs): remove scroll snapping from tab bars

--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -24,7 +24,7 @@
   }
 
   .btn-tab {
-    @apply rounded-md py-1.5 px-5.5 flex items-center gap-2 text-sm text-normal hover:text-muted dark:hover:text-soft snap-center z-10;
+    @apply rounded-md py-1.5 px-5.5 flex items-center gap-2 text-sm text-normal hover:text-muted dark:hover:text-soft z-10;
 
     &.btn-tab-icon-only {
       @apply p-2;
@@ -36,7 +36,7 @@
   }
 
   .tab-container {
-    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm snap-x hide-scrollbar;
+    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm hide-scrollbar;
   }
 
   .tab-container-scroll-left {
