--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,13 +1,24 @@
-<title><%= content_for?(:title) ? "#{yield(:title)} / TeamRunner" : "TeamRunner" %></title>
+<title><%= content_for?(:title) ? "#{yield(:title)} / TeamRunner" : 'TeamRunner' %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+
+<!-- PWA tags -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="TeamRunner">
+<link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
+
+<!-- Favicon tags -->
+<%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', sizes: '180x180' %>
+<%= favicon_link_tag 'favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: '32x32' %>
+<%= favicon_link_tag 'favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: '16x16' %>
+<%= favicon_link_tag 'favicon.svg', rel: 'mask-icon', color: '#5bbad5' %>
+
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
-
-<%= favicon_link_tag asset_path('favicon.svg'), rel: 'apple-touch-icon' %>
 
 <script>
   if ('<%= user_signed_in? ? current_user.settings(:appearance).theme : 'system' %>' === 'dark' || ('<%= user_signed_in? ? current_user.settings(:appearance).theme : 'system' %>' === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
